# arangors

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: linux.yml
examples/: analyzer.rs  aql.rs  collection.rs  custom_client.rs  database.rs  document.rs  transaction.rs  view.rs
examples/blocking/: Cargo.toml
examples/blocking/src/: main.rs
examples/custom_http_client/: Cargo.toml  README.md
examples/custom_http_client/src/: client.rs  main.rs
examples/reqwest_rustls/: Cargo.toml  README.md
examples/reqwest_rustls/src/: client.rs  main.rs
src/: analyzer.rs  aql.rs  collection.rs  connection.rs  database.rs  document.rs  error.rs  graph.rs  index.rs  lib.rs  response.rs  session.rs  transaction.rs  user.rs  view.rs
src/client/: mod.rs  reqwest.rs  surf.rs
src/collection/: mod.rs  options.rs  response.rs
src/connection/: auth.rs  client.rs  mod.rs  model.rs  options.rs  tests.rs
src/document/: mod.rs  options.rs  response.rs
src/result/: mod.rs
tests/: analyzer.rs  aql.rs  collection.rs  common.rs  connection.rs  database.rs  docker-compose.yml  document.rs  graph.rs  index.rs  init_db.sh  test_aql.rs  test_collections.rs  test_connection.rs  test_database.rs  test_document.rs  transaction.rs  user.rs  view.rs
