[package]
name = "arangors"
version = "0.5.0"
edition = "2018"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
readme = "README.md"
license = "MIT"
description = "Rust driver for ArangoDB"
repository = "https://github.com/fMeow/arangors"
documentation = "https://docs.rs/arangors"
keywords = [ "nosql", "database", "client", "driver", "arangoDB" ]
exclude = [ ".gitignore", ".github", "tests/**/*" ]

[package.metadata.docs.rs]
all-features = false
features = [ "rocksdb", "reqwest_async" ]

[badges.maintenance]
status = "actively-developed"

[features]
default = [ "rocksdb", "reqwest_async" ]
blocking = [ "maybe-async/is_sync", "uclient/blocking" ]
reqwest_async = [ "uclient/async_reqwest" ]
reqwest_async_rustls = [ "uclient/async_reqwest_rustls" ]
reqwest_blocking = [ "uclient/blocking_reqwest", "blocking" ]
reqwest_blocking_rustls = [ "uclient/blocking_reqwest_rustls", "blocking" ]
surf_async = [ "uclient/async_surf", "http-types" ]
cluster = [ ]
enterprise = [ ]
mmfiles = [ ]
rocksdb = [ ]
arango3_7 = [ ]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
http = "0.2"
log = "0.4"
maybe-async = "0.2"
serde_json = "1"
serde_qs = "0.8"
thiserror = "1"
typed-builder = "0.9"
url = "2"
uclient = "0.2"

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.reqwest]
  version = "0.11"
  features = [ "gzip", "json" ]
  optional = true

  [dependencies.surf]
  version = "2"
  optional = true

  [dependencies.http-types]
  version = "2.10"
  optional = true

[dev-dependencies]
env_logger = "0.8"
pretty_assertions = "0.7"
regex = "1"
anyhow = "1"

  [dev-dependencies.tokio]
  version = "1"
  features = [ "macros", "rt-multi-thread" ]

  [dev-dependencies.async-std]
  version = "1"
  features = [ "attributes" ]

  [dev-dependencies.reqwest]
  version = "0.11"
