[package]
name = "arangors"
version = "0.6.0"
edition = "2021"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
readme = "README.md"
license = "MIT"
description = "Rust driver for ArangoDB"
repository = "https://github.com/fMeow/arangors"
documentation = "https://docs.rs/arangors"
keywords = [ "nosql", "database", "client", "driver", "arangoDB" ]
exclude = [ ".gitignore", ".github", "tests/**/*" ]

[package.metadata.docs.rs]
all-features = false
features = [ "rocksdb", "reqwest_async" ]

[badges.maintenance]
status = "actively-developed"

[features]
default = [ "rocksdb", "reqwest_async", "reqwest_default-tls" ]
blocking = [ "maybe-async/is_sync" ]
reqwest_async = [ "dep:reqwest" ]
reqwest_blocking = [ "reqwest/blocking", "blocking" ]
reqwest_default-tls = [ "reqwest/default-tls" ]
reqwest_rustls-tls = [ "reqwest/rustls-tls" ]
reqwest_macos-system-configuration = [ "reqwest/macos-system-configuration" ]

surf_async = [ "http-types", "surf" ]
cluster = [ ]
enterprise = [ ]
mmfiles = [ ]
rocksdb = [ ]
arango3_7 = [ ]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
http = "1"
log = "0.4"
maybe-async = "0.2"
serde_json = "1"
serde_qs = "0.13"
thiserror = "1"
typed-builder = "0.18"
url = "2"
serde_repr = "0.1"

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.reqwest]
  version = "0.12"
  default_features = false
  features = [ "charset", "http2", "gzip", "json" ]
  optional = true

  [dependencies.surf]
  version = "2"
  optional = true

  [dependencies.http-types]
  version = "2.10"
  optional = true

[dev-dependencies]
env_logger = "0.11"
pretty_assertions = "1"
regex = "1"
anyhow = "1"

  [dev-dependencies.tokio]
  version = "1"
  features = [ "macros", "rt-multi-thread" ]

  [dev-dependencies.async-std]
  version = "1"
  features = [ "attributes" ]

  [dev-dependencies.reqwest]
  version = "0.12"
