[package]
name = "blocking"
version = "0.1.0"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = { version = "0.4", features = [
  "blocking",
], default-features = false }
