[package]
name = "reqwest_rustls"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can add features like rocksdb or blocking if you want
# but DO NOT add `reqwest_async`, `reqwest_blocking` or `surf_async`.
arangors = { path = "../../", default-features = false }
anyhow = "1"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

# required dependencies for ReqwestClient
reqwest = { version = "0.11", features = [ "gzip", "json", "rustls-tls" ], default-features = false }
async-trait = "0.1"
http = "0.2"

