[package]
name = "custom_http_client"
version = "0.1.0"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use arangors as usual
arangors = { path = "../..", default-features = false, features = ["reqwest_async"] }
anyhow = "1"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

# enable tls feature and that's all
# see generated Cargo.lock
reqwest = { version = "0.12", features = [ "rustls-tls" ], default-features = false }
